# minicom

./: .gitignore  LICENSE  README.md  bootstrap.sh
auth/: TODO.md  deploy.sh  dockerfile  go.mod  go.sum  k8s.yml  main.go
auth/internal/auth/: handler.go  main.go  repo.go
auth/internal/auth/types/: models.go  reqres.go
auth/internal/cfg/: cfg.go
auth/internal/errors/: errors.go
auth/internal/helpers/: banner.go  reqres.go
catalogue/: Cargo.toml
catalogue/src/: config.rs  main.rs  routes.rs
catalogue/src/types/: mod.rs  models.rs  reqres.rs
docs/: Makefile  README.md  services.dot
kubernetes-dashboard/: deploy.sh
mongodb/: deploy.sh  uri.sh
