[package]
name = "catalogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]
